--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ h1 {
     grid-area: 1 / 3 / 1 / 6;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
   }
 
@@ -164,6 +164,7 @@ h1 {
 
   .rating {
     width: 70%;
+    padding: 1.5em 0;
   }
 
   .rating-stars {
