--- a/style.css
+++ b/style.css
@@ -1,12 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300;600;700&display=swap");
 
 :root {
-  --color-primary: hsl(300, 43%, 22%);
-  --color-secondary: hsl(333, 80%, 67%);
-
-  --color-white: hsl(0, 0%, 100%);
-  --color-light-gray: hsl(300, 24%, 96%);
-  --color-gray: hsl(303, 10%, 53%);
+  --color-primary: hsl(223, 87%, 63%);
 }
 
 *,
@@ -20,171 +15,174 @@ html {
 }
 
 body {
-  font-family: "Spartan";
-  font-size: 0.9375rem;
-  text-align: center;
+  min-height: 90%;
   display: flex;
   justify-content: center;
-}
-
-body,
-h1,
-p {
-  margin: 0;
+  align-items: center;
+  font-family: "Libre Franklin", sans-serif;
+  text-align: center;
 }
 
 img {
   max-width: 100%;
 }
 
-/* Typography */
-
-h1,
-.rating {
-  color: var(--color-primary);
+.container {
+  width: min(90%, 350px);
 }
 
-header p {
-  color: var(--color-gray);
-}
-
-.review {
-  color: var(--color-white);
-}
-
-.review p {
-  color: var(--color-light-gray);
-}
-
-/* Layout */
+/* Header */
 
 header {
-  margin: 3em 0 5em 0;
+  margin: 3em 0;
+  text-align: center;
 }
 
-.container {
-  width: min(90%, 1100px);
+header img {
+  margin-bottom: 1.25em;
 }
 
 h1 {
-  margin: 1em 0 0.4em 0;
+  margin-bottom: 0.25em;
+  font-weight: normal;
+  font-size: 1.75rem;
+  color: hsl(0, 0%, 59%);
 }
 
-.rating {
-  margin: 3em;
+h1 span {
   font-weight: bold;
+  color: hsl(209, 33%, 12%);
 }
 
-.rating-stars {
-  margin-bottom: 0.75em;
+header p {
+  color: hsl(209, 33%, 12%);
 }
 
-.rating-stars > * {
-  margin: 0.1em;
+/* Form */
+
+form {
+  margin-bottom: 3em;
 }
 
-/* Reviews */
+input {
+  width: 100%;
+  padding: 0.9em 1.8em;
+  border: 1px solid hsl(223, 100%, 88%);
+  border-radius: 25px;
+  color: hsl(209, 33%, 12%);
+  font-size: 0.95rem;
+  outline: none;
+}
 
-.review {
-  padding: 2em;
-  border-radius: 10px;
-  margin: 1.5em 0;
-  background-color: var(--color-primary);
+input::placeholder {
+  color: hsl(0, 0%, 59%);
+}
+
+.form-group {
   display: flex;
   flex-direction: column;
-  text-align: start;
+  margin-bottom: 1em;
 }
 
-.review-header {
-  display: flex;
-  align-items: center;
-  margin-bottom: 2em;
+.form-group small {
+  display: none;
 }
 
-.review-image {
-  width: 50px;
-  border-radius: 50%;
+.form-group.invalid input {
+  border: 1px solid hsl(354, 100%, 66%);
 }
 
-.review-author {
-  margin-left: 1.5em;
-}
-
-.review-author-name {
-  margin-bottom: 0.25em;
-  font-weight: bold;
-}
-
-.review-author span {
+.form-group.invalid small {
   display: block;
-  color: hsl(333, 80%, 67%);
+  margin: 0.5em 0;
+  color: hsl(354, 100%, 66%);
+  font-style: italic;
 }
 
-/* Media Query */
+button {
+  display: block;
+  width: 100%;
+  padding: 0.95em;
+  border: none;
+  border-radius: 25px;
+  color: white;
+  font-weight: 600;
+  font-size: 0.95rem;
+  background-color: var(--color-primary);
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
 
-@media (min-width: 1075px) {
-  body {
-    min-height: 100%;
-    align-items: center;
-    text-align: start;
+button:hover,
+button:focus {
+  background-color: hsl(223, 87%, 73%);
+}
+
+/* Footer */
+
+footer {
+  margin: 3em 0 2em 0;
+}
+
+footer p {
+  color: hsl(0, 0%, 59%);
+}
+
+.fa {
+  width: 32px;
+  padding: 0.5em;
+  border-radius: 50%;
+  margin: 0.75em 0.25em;
+  color: var(--color-primary);
+  text-decoration: none;
+}
+
+.fa:hover,
+.fa:focus {
+  color: white;
+  background-color: var(--color-primary);
+}
+
+/* Media Queries */
+
+@media (min-width: 600px) {
+  .container {
+    width: min(90%, 600px);
   }
 
   h1 {
-    font-size: 2.5rem;
+    font-size: 3rem;
   }
 
-  .container {
-    display: grid;
-    grid-template: 1fr 1fr / repeat(5, 1fr);
+  header p {
+    font-size: 1.25rem;
   }
 
-  header {
-    grid-area: 1 / 1 / 1 / 3;
-  }
-
-  #ratings {
-    grid-area: 1 / 3 / 1 / 6;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-
-  #ratings > div:first-of-type {
-    margin: 0;
-  }
-
-  #ratings > div:nth-of-type(2) {
-    margin: 0 -4em 0 4em;
-  }
-
-  #ratings > div:last-of-type {
-    margin: 0 -8em 0 8em;
-  }
-
-  .rating {
-    width: 70%;
-    padding: 1.25em 0;
-  }
-
-  .rating-stars {
-    display: inline-block;
-    margin-right: 2.5em;
-  }
-
-  #reviews {
-    grid-area: 2 / 1 / 2 / 6;
+  form {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    gap: 2em;
+    align-items: flex-start;
+    width: 100%;
   }
 
-  #reviews > div:first-of-type {
-    margin: -1em 0 1em 0;
+  .form-group {
+    width: 67%;
   }
 
-  #reviews > div:last-of-type {
-    margin: 1em 0 -1em 0;
+  .form-group.invalid small {
+    text-align: left;
+    margin-left: 2em;
+  }
+
+  input {
+    padding: 1.1em 1.8em;
+  }
+
+  button {
+    padding: 1.1em;
+  }
+
+  button {
+    width: 30%;
   }
 }
